--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,6 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
+locale: "en-US"
 title: Khoi Tran
 email: khoitran1717@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
@@ -25,9 +26,11 @@ description: >- # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://econwares.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
+
+
 
 # Build settings
 remote_theme: "mmistakes/minimal-mistakes@4.24.0"
